kubernetes/aks/hajimari.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: hajimari
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
  hostnames:
  - lab.tplant.com.au
  rules:
  - backendRefs:
    - name: hajimari
      port: 3000
  - backendRefs:
    - name: well-known
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /robots.txt
    - path:
        type: PathPrefix
        value: /.well-known/
